[gd_scene load_steps=24 format=3 uid="uid://bheeihrnwqfii"]

[ext_resource type="Texture2D" uid="uid://c65b2hk1ahqgp" path="res://Art/Sprout Lands - Sprites - premium pack/Tilesets/Building parts/Chest.png" id="1_3ynhi"]
[ext_resource type="Script" path="res://Scripts/Shop_chest_basic.gd" id="2_pcltj"]
[ext_resource type="FontFile" uid="uid://082wydk0ygnw" path="res://Roboto/Roboto-Medium.ttf" id="3_fq1u7"]

[sub_resource type="Animation" id="Animation_sp7ox"]
resource_name = "Idle"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_frn5q"]
resource_name = "opening"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 2, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xds1d"]
_data = {
"Idle": SubResource("Animation_sp7ox"),
"opening": SubResource("Animation_frn5q")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0c0kj"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ugyqy"]
animation = &"opening"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_mlm46"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ugyqy")
blend_point_0/pos = Vector2(0, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jtvac"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_31xh5"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lmws0"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_8m8pa"]
states/Idle/node = SubResource("AnimationNodeAnimation_0c0kj")
states/Idle/position = Vector2(420, 173)
states/Start/position = Vector2(204, 100)
states/opening/node = SubResource("AnimationNodeBlendSpace2D_mlm46")
states/opening/position = Vector2(420, 100)
transitions = ["Start", "opening", SubResource("AnimationNodeStateMachineTransition_jtvac"), "opening", "Idle", SubResource("AnimationNodeStateMachineTransition_31xh5"), "Idle", "opening", SubResource("AnimationNodeStateMachineTransition_lmws0")]

[sub_resource type="Curve" id="Curve_a5eav"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_fu34e"]
offsets = PackedFloat32Array(0.303419, 0.935897)
colors = PackedColorArray(1, 1, 1, 1, 0.145993, 0.145993, 0.145993, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_v7rik"]
gradient = SubResource("Gradient_fu34e")
width = 30
height = 20
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.667785, 0.22651)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mwp6d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uv4fs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q0f81"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kmfnh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_24tef"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a8tus"]
bg_color = Color(0.556863, 0.690196, 0.396078, 0.901961)
border_color = Color(0.337255, 0.396078, 0.376471, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="Theme" id="Theme_pfyu6"]
Panel/styles/panel = SubResource("StyleBoxFlat_a8tus")

[node name="Shop_Chest_Basic" type="Sprite2D" groups=["ShopChest"]]
light_mask = 3
position = Vector2(0, 1)
texture = ExtResource("1_3ynhi")
hframes = 5
vframes = 2
script = ExtResource("2_pcltj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xds1d")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xds1d")
}
tree_root = SubResource("AnimationNodeStateMachine_8m8pa")
anim_player = NodePath("../AnimationPlayer")
parameters/opening/blend_position = Vector2(0.0945017, 0.132275)

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = -1
position = Vector2(0, -1)
emitting = false
amount = 100
speed_scale = 0.5
explosiveness = 0.2
randomness = 0.5
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, -10)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 30.0
scale_amount_min = 0.5
scale_amount_max = 1.2
scale_amount_curve = SubResource("Curve_a5eav")
color = Color(1, 1, 1, 0.784314)

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -2)
enabled = false
color = Color(1, 1, 0.901961, 1)
energy = 2.0
range_z_min = 0
range_z_max = 2
range_layer_max = 2
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_v7rik")

[node name="Button" type="Button" parent="."]
offset_left = -8.0
offset_top = -6.0
offset_right = 8.0
offset_bottom = 8.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_mwp6d")
theme_override_styles/hover = SubResource("StyleBoxEmpty_uv4fs")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_q0f81")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_kmfnh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_24tef")
metadata/_edit_use_anchors_ = true

[node name="InfoMessage" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -39.0
offset_right = -4.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_pfyu6")

[node name="Prompt" type="Label" parent="InfoMessage"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_fq1u7")
theme_override_font_sizes/font_size = 4
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="InfoMessage"]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="InfoMessage/Timer" to="." method="_on_timer_timeout"]
